--- a/HTML/sparkling/style.css
+++ b/HTML/sparkling/style.css
@@ -1,47 +1,97 @@
-:root{
-    --c1:#E66613;
-    --c2:#EEE;
+:root {
+    --c1: #E66613;
+    --c2: #EEE;
 
-    --ff:sans-serif;
+    --ff: sans-serif;
+    --m: 50px;
 }
 
-body{
+body {
     background-color: white;
     font-family: var(--ff);
 }
 
-a{ color:var(--c1); text-decoration: none;}
+a {
+    color: var(--c1);
+    text-decoration: none;
+}
 
 header,
-footer{ background-color: var(--c2);}
+footer {
+    background-color: var(--c2);
+}
 
-header{ display: flex;}
+header {
+    display: flex;
+    gap:20px;
+    justify-content: space-between;
+}
 
-header nav ul{
+header nav ul {
     list-style: none;
     padding-left: 0;
 
     display: flex;
-    gap:5px;
+    gap: 1px;
+margin-top:50px;}
+
+
+header nav ul li a{
+    background-color: grey;
+    padding: 10px;
+    color:white;
 }
 
-main{
-    max-width:960px;
-    margin:0 auto;
+header nav ul li.actual a{ background-color: var(--c1); }
+
+main {
+    max-width: 960px;
+    margin: 0 auto;
 
     display: flex;
-    gap:10px;
+    gap: 10px;
     flex-direction: row-reverse;
 }
 
-main aside{
-    width:30%;
+main aside {
+    width: 30%;
 }
 
-main section{
-    width:75%;
+main section {
+    width: 75%;
 }
 
 
 
-footer{ text-align: center;}
+footer {
+    text-align: center;
+
+    /*
+    padding: var(--m);
+    margin-top: calc(var(--m)/2);
+    */
+
+    padding: 50px;
+    margin-top: 25px;
+}
+
+
+
+.logo{ padding-left: 70px;
+background:url(imagenes/img02.jpg) left center no-repeat;}
+
+
+.milogo {
+    color: #333;
+    font-size: 33px;
+    font-weight: bold;
+}
+.milogo span{
+    color:var(--c1);
+}
+
+.eslogan {
+    color: #888;
+    font-family: 'Courier New', Courier, monospace;
+    display: block;
+}
