--- a/HTML/sparkling/style.css
+++ b/HTML/sparkling/style.css
@@ -11,10 +11,23 @@ body {
     font-family: var(--ff);
 }
 
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 a {
     color: var(--c1);
+}
+
+a {
     text-decoration: none;
 }
+
+
+p a:hover{ text-decoration: underline;}
 
 header,
 footer {
@@ -23,7 +36,7 @@ footer {
 
 header {
     display: flex;
-    gap:20px;
+    gap: 20px;
     justify-content: space-between;
 }
 
@@ -33,16 +46,23 @@ header nav ul {
 
     display: flex;
     gap: 1px;
-margin-top:50px;}
-
-
-header nav ul li a{
-    background-color: grey;
-    padding: 10px;
-    color:white;
+    margin-top: 50px;
 }
 
-header nav ul li.actual a{ background-color: var(--c1); }
+
+header nav ul li a {
+    background-color: grey;
+    padding: 10px;
+    color: white;
+}
+
+header nav ul li a:hover{
+    background-color: var(--c1);
+}
+
+header nav ul li.actual a {
+    background-color: var(--c1);
+}
 
 main {
     max-width: 960px;
@@ -62,6 +82,26 @@ main section {
 }
 
 
+main aside ul{
+    list-style: none;
+    padding-left: 0;
+}
+
+main aside ul li a{
+    border-bottom: grey 1px dotted;
+    display: block;
+    text-align:right;
+    padding-right:18px;
+    background: url(imagenes/img03.jpg) right center no-repeat;
+    padding: 4px;
+}
+
+main aside ul li a:hover{
+    color:#333;
+}
+
+
+
 
 footer {
     text-align: center;
@@ -77,8 +117,10 @@ footer {
 
 
 
-.logo{ padding-left: 70px;
-background:url(imagenes/img02.jpg) left center no-repeat;}
+.logo {
+    padding-left: 70px;
+    background: url(imagenes/img02.jpg) left center no-repeat;
+}
 
 
 .milogo {
@@ -86,8 +128,9 @@ background:url(imagenes/img02.jpg) left center no-repeat;}
     font-size: 33px;
     font-weight: bold;
 }
-.milogo span{
-    color:var(--c1);
+
+.milogo span {
+    color: var(--c1);
 }
 
 .eslogan {
