--- a/JS/webBaile/style.css
+++ b/JS/webBaile/style.css
@@ -11,9 +11,12 @@
 --font-family1:sans-serif;
 --font-family2:monospace;
 }
+
+
 body{
  font-family:  var(--font-family1);   
  max-width:var(--max-width);
+ margin:0 auto;
  padding: var(--padding);
 }
 h1,h2,h3,h4,h5{
@@ -26,7 +29,7 @@ header{}
 main{}
 footer{}
 p{}
-a{ text-decoration: none;}
+a{ text-decoration: none; color:var(--color-dark)}
 img{
 max-width:100%;
 
@@ -43,3 +46,18 @@ nav ul{
 nav ul a:hover{
     cursor:pointer;
 font-weight: bold;}
+
+/* FLEX */
+header,
+footer,
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+    gap:5px;
+    justify-content: space-between;
+}
+
+footer{
+    align-items: center;
+    flex-direction: column;
+}
